--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,1 +1,218 @@
+*
+{
+	padding: 0;
+    margin: 0;
+    text-decoration: none;
+    list-style: none;
+    scroll-behavior: smooth;
+    box-sizing: border-box; 
+}
+:root{
+    --clair:#fff;
+    --dark:#000;
+    --gray:#555;
+    --rose:#fc036b;
+    --graylight:#777;
+}
+/* Styles de base pour le document HTML */
+html{
+font-family:'arial';	
+overflow-x: hidden;
+}
+h1,h2,h3,button,a,label,span,th,legend
+{
+	font-variant: small-caps;
+}
+.principal
+{
+display:flex;
+}
+.container
+{
+width:40%;
+position:absolute;
+top:50%;
+left:50%;
+transform:translate(-50%,-50%);
+display:flex;
+justify-content:center;
 
+}
+.login-form
+{
+	width:60%;
+	padding:13px;
+    border: 4px solid #ccc;
+    border-radius: 4px;
+}
+.login-form h2
+{
+margin-bottom:14px;	
+}
+.login-form label{
+display:block;
+font-weight:bold;
+}
+.login-form input[type="text"],
+.login-form input[type="password"],
+.login-form input[type="email"],
+.login-form select
+{
+display:inline-block;
+width:100%;
+padding:10px 0;
+margin:7px 0;
+border:none;
+border-bottom:2px solid;
+}
+.login-form input[type="radio"]
+{
+margin-right:6px;
+}
+.login-form input[type="text"]:focus,
+.login-form input[type="password"]:focus,
+.login-form input[type="email"]:focus,
+.login-form select:focus
+{
+outline:none;
+}
+.login-form button
+{
+display:inline-block;
+width:100%;
+padding:10px 0;
+margin:7px 0;
+
+background-color:black;
+color:white;
+border:none;
+text-align:center;
+transition: 0.7s;
+cursor: pointer;
+}
+span
+{
+margin:7px 0;
+display:inline-block;
+width:100%;
+background:var(--rose);
+padding:10px;
+font-weight:bold;
+color:var(--clair);
+}
+/*navbar*/
+nav
+{
+background-color:black;
+padding:20px 10px;
+color: var(--clair);
+height:100vh;
+width:220px;
+}
+nav h4
+{
+	margin-bottom:45px;
+	color:var(--rose);
+	padding:20px 10px;
+}
+nav ul li a
+{
+	color:inherit;
+	padding:20px 10px;
+	width:150px;
+	display:inline-block;
+	margin:12px 0;
+	transition:1.5s;
+	
+}
+.active
+{
+color:var(--rose);
+}
+nav ul li a:hover
+{
+	background-color:var(--rose);
+	opacity:0.8;
+	color: var(--clair);
+	border-radius:5px;
+}
+.row{
+display: flex;
+gap:50px;
+width:50%;
+margin:0 auto;
+padding:20px 10px;
+}
+.col{
+display: flex;
+align-items: center;
+justify-content: center;
+flex-direction: column;
+flex:1;
+background-color:var(--clair);
+height:250px;
+}
+.content{
+padding:20px 10px;
+flex-grow:1;
+background-color:#F9F3F2;
+}
+table{
+border-collapse:collapse;
+width:100%;
+}
+th,td{
+padding:5px;
+border:1px solid black;
+}
+.top
+{
+
+display: flex;
+margin:30px 0;
+justify-content:space-between;
+align-items:center;
+width:100%;
+}
+
+.top a, .top button
+{
+display:inline-block;
+width:150px;
+padding:10px 0;
+background-color:black;
+color:white;
+text-align:center;
+transition: 0.7s;
+cursor: pointer;
+border: none;	
+}
+
+.top input{
+display:inline-block;
+width:200px;
+padding:10px 0;
+background:transparent;
+border:none;
+border-bottom:2px solid;
+}
+.top input:focus{outline:none}
+button:hover{
+	opacity: 0.8;
+}
+fieldset
+{
+	padding:12px;
+	border: 2px solid;
+}
+.red{
+color:red;
+}
+.blue{
+color:blue;
+}
+img
+{
+	width:20px;
+
+}
